# cosmos-db

./: .gitignore  list_cosmosDBRoles.py  pyproject.toml  readcosmos.py  sample-book.txt  setup_cosmos_rbac.py  writeCosmos.py
items/: book1.json  book2.json  book3.json  book4.json  book5.json  hotel1.json  hotel2.json
